; ModuleID = '/home/carl/AnghaBench/TDengine/src/system/detail/src/extr_vnodeFile.c_vnodeGetHeadDataLname.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/system/detail/src/extr_vnodeFile.c_vnodeGetHeadDataLname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [26 x i8] c"%s/vnode%d/db/v%df%d.head\00", align 1
@tsDirectory = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [26 x i8] c"%s/vnode%d/db/v%df%d.data\00", align 1
@.str.2 = private unnamed_addr constant [26 x i8] c"%s/vnode%d/db/v%df%d.last\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vnodeGetHeadDataLname(i8* %0, i8* %1, i8* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %20

13:                                               ; preds = %5
  %14 = load i8*, i8** %6, align 8
  %15 = load i8*, i8** @tsDirectory, align 8
  %16 = load i32, i32* %9, align 4
  %17 = load i32, i32* %9, align 4
  %18 = load i32, i32* %10, align 4
  %19 = call i32 @sprintf(i8* %14, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i8* %15, i32 %16, i32 %17, i32 %18)
  br label %20

20:                                               ; preds = %13, %5
  %21 = load i8*, i8** %7, align 8
  %22 = icmp ne i8* %21, null
  br i1 %22, label %23, label %30

23:                                               ; preds = %20
  %24 = load i8*, i8** %7, align 8
  %25 = load i8*, i8** @tsDirectory, align 8
  %26 = load i32, i32* %9, align 4
  %27 = load i32, i32* %9, align 4
  %28 = load i32, i32* %10, align 4
  %29 = call i32 @sprintf(i8* %24, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0), i8* %25, i32 %26, i32 %27, i32 %28)
  br label %30

30:                                               ; preds = %23, %20
  %31 = load i8*, i8** %8, align 8
  %32 = icmp ne i8* %31, null
  br i1 %32, label %33, label %40

33:                                               ; preds = %30
  %34 = load i8*, i8** %8, align 8
  %35 = load i8*, i8** @tsDirectory, align 8
  %36 = load i32, i32* %9, align 4
  %37 = load i32, i32* %9, align 4
  %38 = load i32, i32* %10, align 4
  %39 = call i32 @sprintf(i8* %34, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0), i8* %35, i32 %36, i32 %37, i32 %38)
  br label %40

40:                                               ; preds = %33, %30
  ret void
}

declare dso_local i32 @sprintf(i8*, i8*, i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
